--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "211219_wetube",
   "version": "1.0.0",
   "description": "The best way to watch videos.",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/defrostingk/211219_wetube.git"
+  },
+  "scripts": {
+    "win": "node index.js"
   },
   "author": "defrostingk",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/defrostingk/211219_wetube/issues"
   },
-  "homepage": "https://github.com/defrostingk/211219_wetube#readme"
+  "homepage": "https://github.com/defrostingk/211219_wetube#readme",
+  "dependencies": {
+    "express": "^4.17.2"
+  }
 }
