--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/defrostingk/211219_wetube.git"
   },
   "scripts": {
-    "dev": "babel-node index.js"
+    "dev": "nodemon --exec babel-node index.js"
   },
   "author": "defrostingk",
   "license": "ISC",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/node": "^7.16.5",
-    "@babel/preset-env": "^7.16.5"
+    "@babel/preset-env": "^7.16.5",
+    "nodemon": "^2.0.15"
   }
 }
