--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
