--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "@babel/node": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "nodemon": "^2.0.15",
+    "sass": "^1.48.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   }
