--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.16.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "mini-css-extract-plugin": "^2.5.0",
     "nodemon": "^2.0.15",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
